--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,11 @@ scipy==1.10.0
 scikit-learn==1.3.1
 db-dtypes
 pyarrow
+streamlit
+streamlit-webrtc
+av==11.0.0
+opencv-python==4.9.0.80
+opencv-python-headless
 # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
 tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
 tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
