--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,5 @@ matplotlib==3.7.2
 seaborn==0.12.2
 numpy==1.23.5
 pandas==1.5.3
-scikit-learn==1.3.1
 streamlit==1.20.0
-streamlit-webrtc==0.42.0
-av==11.0.0
+streamlit-webrtc
